--- a/LMS/LMS/Views/Shared/_Admin.cshtml
+++ b/LMS/LMS/Views/Shared/_Admin.cshtml
@@ -82,36 +82,34 @@
                             </div>
                             <!-- /input-group -->
                         </li>
+                
+
                         <li>
-                            <a href="Exam Form.html"><i class="fa fa-dashboard fa-fw"></i>Admin Dashboard</a>
+                            <a href="/Admin/Courses"><i class="fa fa-table fa-fw"></i> Courses</a>
                         </li>
 
                         <li>
-                            <a href="courses form.html"><i class="fa fa-table fa-fw"></i> Courses</a>
+                            <a href="/Admin/ShowCourses"><i class="fa fa-table fa-fw"></i>Show Courses</a>
                         </li>
 
                         <li>
-                            <a href="table of courses.html"><i class="fa fa-table fa-fw"></i>Show Courses</a>
+                            <a href="/Admin/Exam"><i class="fa fa-table fa-fw"></i>Exam</a>
+                        </li>
+                        <li>
+                            <a href="/Admin/ShowExam"><i class="fa fa-table fa-fw"></i>Show Exam</a>
                         </li>
 
                         <li>
-                            <a href="Exam Form.html"><i class="fa fa-table fa-fw"></i>Exam</a>
+                            <a href="/Admin/Result"><i class="fa fa-table fa-fw"></i>Result</a>
                         </li>
                         <li>
-                            <a href="table of exam.html"><i class="fa fa-table fa-fw"></i>Show Exam</a>
-                        </li>
-
-                        <li>
-                            <a href="Result.html"><i class="fa fa-table fa-fw"></i>Result</a>
+                            <a href="/Admin/ShowResult"><i class="fa fa-table fa-fw"></i>Show Result</a>
                         </li>
                         <li>
-                            <a href="Show Result.html"><i class="fa fa-table fa-fw"></i>Show Result</a>
+                            <a href="/Admin/StudentResult"><i class="fa fa-table fa-fw"></i>Student Result</a>
                         </li>
                         <li>
-                            <a href="Student Result.html"><i class="fa fa-table fa-fw"></i>Student Result</a>
-                        </li>
-                        <li>
-                            <a href="AdminReports.html"><i class="fa fa-table fa-fw"></i>Reports</a>
+                            <a href="/Admin/AdminReports"><i class="fa fa-table fa-fw"></i>Reports</a>
                         </li>
 
 
