--- a/LMS/LMS/Views/EmpRegister/ClassAttendence.cshtml
+++ b/LMS/LMS/Views/EmpRegister/ClassAttendence.cshtml
@@ -17,7 +17,7 @@
             <div class="col-lg-12">
                 <div class="panel panel-default">
                     <div class="panel-heading">
-                        Employee Information
+                        Class Attendance
                     </div>
                     <div class="panel-body">
                         <div class="row">
