--- a/LMS/LMS/Views/Shared/_Employee.cshtml
+++ b/LMS/LMS/Views/Shared/_Employee.cshtml
@@ -77,7 +77,7 @@
                             <!-- /input-group -->
                         </li>
                         <li>
-                            <a href="typography.html"><i class="fa fa-dashboard fa-fw"></i> Employee Dashboard</a>
+                            <a href="/EmpRegister/empDetails"><i class="fa fa-dashboard fa-fw"></i> Employee Dashboard</a>
                         </li>
 
 
@@ -85,27 +85,24 @@
                         <li>
                             <!--  <a href="#"><i class="fa fa-wrench fa-fw"></i> UI Elements<span class="fa arrow"></span></a>
                               <ul class="nav nav-second-level">-->
-                        <li>
-                            <a href="notifications.html"><i class="fa fa-table fa-fw"></i>Employee Form</a>
+                      
+                            <a href="/EmpRegister/empDetails"><i class="fa fa-table fa-fw"></i>Employee Details</a>
                         </li>
                         <li>
-                            <a href="typography.html"><i class="fa fa-table fa-fw"></i>Employee Details</a>
+                            <a href="/EmpRegister/ClassAttendence"><i class="fa fa-table fa-fw"></i>Class Attendence</a>
                         </li>
                         <li>
-                            <a href="panels-wells.html"><i class="fa fa-table fa-fw"></i>Class Attendence</a>
-                        </li>
-                        <li>
-                            <a href="empReports.html"><i class="fa fa-table fa-fw"></i>Reports</a>
+                            <a href="/EmpRegister/empReports"><i class="fa fa-table fa-fw"></i>Reports</a>
                         </li>
 
                         <li>
-                            <a href="icons.html"><i class="fa fa-table fa-fw"></i> Show Class Attendence</a>
+                            <a href="/EmpRegister/showClassAttendence"><i class="fa fa-table fa-fw"></i> Show Class Attendence</a>
                         </li>
                         <li>
-                            <a href="grid.html"><i class="fa fa-table fa-fw"></i>Student Attendence</a>
+                            <a href="/EmpRegister/stuAttendence"><i class="fa fa-table fa-fw"></i>Student Attendence</a>
                         </li>
                         <li>
-                            <a href="blank.html"><i class="fa fa-table fa-fw"></i>Show Student Attendence</a>
+                            <a href="/EmpRegister/ShowstuAttendence"><i class="fa fa-table fa-fw"></i>Show Student Attendence</a>
                         </li>
                         <!--   </ul> -->
                         <!-- /.nav-second-level -->
