--- a/LMS/LMS/Views/Shared/_Student.cshtml
+++ b/LMS/LMS/Views/Shared/_Student.cshtml
@@ -76,7 +76,7 @@
                             <!-- /input-group -->
                         </li>
                         <li>
-                            <a href="index.html"><i class="fa fa-dashboard fa-fw"></i> Student Dashboard</a>
+                            <a href="/ShowStuInfo/Index"><i class="fa fa-dashboard fa-fw"></i> Student Dashboard</a>
                         </li>
 
 
@@ -85,15 +85,15 @@
                         <!-- /.nav-second-level -->
 
                         <li>
-                            <a href="tables.html"><i class="fa fa-table fa-fw"></i> Student Details</a>
+                            <a href="/ShowStuInfo/Index"><i class="fa fa-table fa-fw"></i> Student Details</a>
                         </li>
                         <li>
-                            <a href="forms.html"><i class="fa fa-edit fa-fw"></i> Student Form</a>
+                            <a href="/StuRegister/Index"><i class="fa fa-edit fa-fw"></i> Student Form</a>
 
 
 
                         <li>
-                            <a href="buttons.html"><i class="fa fa-edit fa-fw"></i>Reports</a>
+                            <a href="/StuReports/Index"><i class="fa fa-edit fa-fw"></i>Reports</a>
                         </li>
 
 
@@ -103,14 +103,14 @@
 
 
                         <li>
-                            <a href="stuShowAttendence.html"><i class="fa fa-edit fa-fw"></i>Show Student Attendence</a>
+                            <a href="/ShowStuAttendence/Index"><i class="fa fa-edit fa-fw"></i>Show Student Attendence</a>
                         </li>
 
                         <li>
-                            <a href="index.html"><i class="fa fa-edit fa-fw"></i>Registered Courses</a>
+                            <a href="/RegisteredCourses/Index"><i class="fa fa-edit fa-fw"></i>Registered Courses</a>
                         </li>
                         <li>
-                            <a href="morris.html"><i class="fa fa-edit fa-fw"></i>Show Registered Courses</a>
+                            <a href="/ShowRegisteredCourses/Index"><i class="fa fa-edit fa-fw"></i>Show Registered Courses</a>
                         </li>
 
 
