--- a/LMS/LMS/Views/Admin/EditCourse.cshtml
+++ b/LMS/LMS/Views/Admin/EditCourse.cshtml
@@ -1,7 +1,7 @@
 ﻿@model LMS.Models.Course
 
 @{
-    ViewBag.Title = "Courses";
+    ViewBag.Title = "EditCourse";
     Layout = "~/Views/Shared/_Admin.cshtml";
 }
 
@@ -9,7 +9,7 @@
     <div class="container-fluid">
         <div class="row">
             <div class="col-lg-12">
-                <h1 class="page-header">Courses</h1>
+                <h1 class="page-header">Update Courses</h1>
             </div>
             <!-- /.col-lg-12 -->
         </div>
@@ -27,6 +27,8 @@
                             <h4>Course</h4>
                             <hr />
                             @Html.ValidationSummary(true, "", new { @class = "text-danger" })
+                            @Html.HiddenFor(model => model.CourseID)
+
                             <div class="form-group">
                                 @Html.LabelFor(model => model.CourseName, htmlAttributes: new { @class = "control-label col-md-2" })
                                 <div class="col-md-10">
@@ -66,9 +68,10 @@
 
                             <div class="form-group">
                                 <div class="col-md-offset-2 col-md-10">
-                                    <input type="submit" value="Create" class="btn btn-default" />
+                                    <input type="submit" value="Save" class="btn btn-default" />
                                 </div>
                             </div>
                         </div>
                         }
- 
+
+                         
