--- a/LMS/LMS/Views/Admin/ShowCourses.cshtml
+++ b/LMS/LMS/Views/Admin/ShowCourses.cshtml
@@ -1,14 +1,16 @@
-﻿
+﻿@model IEnumerable<LMS.Models.Course>
+
 @{
     ViewBag.Title = "ShowCourses";
     Layout = "~/Views/Shared/_Admin.cshtml";
 }
 
+
 <div id="page-wrapper">
     <div class="container-fluid">
         <div class="row">
             <div class="col-lg-12">
-                <h1 class="page-header">Course Information</h1>
+                <h1 class="page-header">View Courses</h1>
             </div>
             <!-- /.col-lg-12 -->
         </div>
@@ -17,181 +19,47 @@
             <div class="col-lg-12">
                 <div class="panel panel-default">
                     <div class="panel-heading">
-                        Course Information
-                    </div>
-                    <!-- /.panel-heading -->
-                    <div class="panel-body">
-                        <div class="table-responsive">
-                            <table class="table table-striped table-bordered table-hover" id="dataTables-example">
-                                <thead>
-                                    <tr>
-                                        <th>Course</th>
-                                        <th>Department</th>
-                                        <th>Session</th>
-                                        <th>Credit Hours</th>
 
-                                    </tr>
-                                </thead>
-                                <tbody>
-                                    <tr class="odd gradeX">
-                                        <td> </td>
-                                        <td> </td>
-                                        <td> </td>
-                                        <td> </td>
+                       
+                        <table class="table">
+                            <tr>
+                                <th>
+                                    @Html.DisplayNameFor(model => model.CourseName)
+                                </th>
+                                <th>
+                                    @Html.DisplayNameFor(model => model.DepartmentID)
+                                </th>
+                                <th>
+                                    @Html.DisplayNameFor(model => model.CreditHours)
+                                </th>
+                                <th>
+                                    @Html.DisplayNameFor(model => model.Session.Session1)
+                                </th>
+                                
+                                <th></th>
+                                <th></th>
+                            </tr>
 
+                            @foreach (var item in Model)
+                            {
+                            <tr>
+                                <td>
+                                    @Html.DisplayFor(modelItem => item.CourseName)
+                                </td>
+                                <td>
+                                    @Html.DisplayFor(modelItem => item.DepartmentID)
+                                </td>
+                                <td>
+                                    @Html.DisplayFor(modelItem => item.CreditHours)
+                                </td>
+                                <td>
+                                    @Html.DisplayFor(modelItem => item.Session.Session1)
+                                </td>
+                                 
 
-                                    </tr>
-                                    <tr class="even gradeC">
-                                        <td> </td>
-                                        <td> </td>
-                                        <td> </td>
-                                        <td> </td>
+                                <td>@Html.ActionLink("Edit", "EditCourse", new { id = item.CourseID }) </td>
+                                <td>@Html.ActionLink("Delete", "DeleteCourse", new { id = item.CourseID }) </td>
+                            </tr>
+                            }
 
-
-                                    </tr>
-
-
-                                    <tr class="even gradeA">
-                                        <td> </td>
-                                        <td> </td>
-                                        <td> </td>
-                                        <td> </td>
-
-
-                                    </tr>
-                                    <tr class="gradeA">
-                                        <td> </td>
-                                        <td> </td>
-                                        <td> </td>
-                                        <td> </td>
-
-
-                                    </tr>
-                                    <tr class="gradeA">
-                                        <td> </td>
-                                        <td> </td>
-                                        <td> </td>
-                                        <td> </td>
-
-                                    </tr>
-                                    <tr class="gradeA">
-                                        <td> </td>
-                                        <td> </td>
-                                        <td> </td>
-                                        <td> </td>
-
-
-                                    </tr>
-                                    <tr class="gradeA">
-                                        <td> </td>
-                                        <td> </td>
-                                        <td> </td>
-                                        <td> </td>
-
-                                    </tr>
-                                    <tr class="gradeA">
-                                        <td> </td>
-                                        <td> </td>
-                                        <td> </td>
-                                        <td> </td>
-
-                                    </tr>
-                                    <tr class="gradeA">
-                                        <td> </td>
-                                        <td> </td>
-                                        <td> </td>
-                                        <td> </td>
-
-                                    </tr>
-                                    <tr class="gradeA">
-                                        <td> </td>
-                                        <td> </td>
-                                        <td> </td>
-                                        <td> </td>
-
-                                    </tr>
-                                    <tr class="gradeA">
-                                        <td> </td>
-                                        <td> </td>
-                                        <td> </td>
-                                        <td> </td>
-
-                                    </tr>
-                                    <tr class="gradeA">
-                                        <td> </td>
-                                        <td> </td>
-                                        <td> </td>
-                                        <td> </td>
-
-                                    </tr>
-                                    <tr class="gradeA">
-                                        <td> </td>
-                                        <td> </td>
-                                        <td> </td>
-                                        <td> </td>
-
-
-                                    </tr>
-                                    <tr class="gradeA">
-                                        <td> </td>
-                                        <td> </td>
-                                        <td> </td>
-                                        <td> </td>
-
-                                    </tr>
-                                    <tr class="gradeA">
-                                        <td> </td>
-                                        <td> </td>
-                                        <td> </td>
-                                        <td> </td>
-
-
-                                    </tr>
-                                    <tr class="gradeA">
-                                        <td> </td>
-                                        <td> </td>
-                                        <td> </td>
-                                        <td> </td>
-
-                                    </tr>
-                                    <tr class="gradeA">
-                                        <td> </td>
-                                        <td> </td>
-                                        <td> </td>
-                                        <td> </td>
-
-                                    </tr>
-                                    <tr class="gradeA">
-                                        <td> </td>
-                                        <td> </td>
-                                        <td> </td>
-                                        <td> </td>
-
-                                    </tr>
-                                    <tr class="gradeA">
-                                        <td> </td>
-                                        <td> </td>
-                                        <td> </td>
-                                        <td> </td>
-
-                                    </tr>
-
-                                </tbody>
-                            </table>
-                        </div>
-                        <!-- /.table-responsive -->
-
-                    </div>
-                    <!-- /.table-responsive -->
-                </div>
-                <!-- /.panel-body -->
-            </div>
-            <!-- /.panel -->
-        </div>
-        <!-- /.col-lg-6 -->
-    </div>
-    <!-- /.row -->
-</div>
-<!-- /.container-fluid -->
-            </div>
-<!-- /#page-wrapper -->
+                        </table>
