--- a/LMS/LMS/Views/EmpRegister/empRegister.cshtml
+++ b/LMS/LMS/Views/EmpRegister/empRegister.cshtml
@@ -1,7 +1,7 @@
 ﻿
 @{
     ViewBag.Title = "empRegister";
-    Layout = "~/Views/Shared/_Employee.cshtml";
+    Layout = "~/Views/Shared/_Admin.cshtml";
 }
 
 <div id="page-wrapper">
