--- a/LMS/LMS/Views/Shared/_Employee.cshtml
+++ b/LMS/LMS/Views/Shared/_Employee.cshtml
@@ -45,16 +45,10 @@
 
                 <li class="dropdown">
                     <a class="dropdown-toggle" data-toggle="dropdown" href="#">
-                        <i class="fa fa-user fa-fw"></i> secondtruth <b class="caret"></b>
+                        <i class="fa fa-user fa-fw"></i> Log out <b class="caret"></b>
                     </a>
                     <ul class="dropdown-menu dropdown-user">
-                        <li>
-                            <a href="#"><i class="fa fa-user fa-fw"></i> User Profile</a>
-                        </li>
-                        <li>
-                            <a href="#"><i class="fa fa-gear fa-fw"></i> Settings</a>
-                        </li>
-                        <li class="divider"></li>
+
                         <li>
                             <a href="login.html"><i class="fa fa-sign-out fa-fw"></i> Logout</a>
                         </li>
@@ -85,7 +79,7 @@
                         <li>
                             <!--  <a href="#"><i class="fa fa-wrench fa-fw"></i> UI Elements<span class="fa arrow"></span></a>
                               <ul class="nav nav-second-level">-->
-                      
+
                             <a href="/EmpRegister/empDetails"><i class="fa fa-table fa-fw"></i>Employee Details</a>
                         </li>
                         <li>
