--- a/LMS/LMS/Views/StuRegister/Index.cshtml
+++ b/LMS/LMS/Views/StuRegister/Index.cshtml
@@ -1,7 +1,7 @@
 ﻿
 @{
     ViewBag.Title = "Index";
-    Layout = "~/Views/Shared/_Student.cshtml";
+    Layout = "~/Views/Shared/_Admin.cshtml";
 }
 
 <div id="page-wrapper">
