--- a/LMS/LMS/Views/Admin/Exam.cshtml
+++ b/LMS/LMS/Views/Admin/Exam.cshtml
@@ -1,76 +1,52 @@
-﻿
+﻿@model LMS.Models.Exam
+
 @{
     ViewBag.Title = "Exam";
     Layout = "~/Views/Shared/_Admin.cshtml";
 }
 
-<div id="page-wrapper">
-    <div class="container-fluid">
-        <div class="row">
-            <div class="col-lg-12">
-                <h1 class="page-header">Exam</h1>
-            </div>
-            <!-- /.col-lg-12 -->
+<h2>Exam</h2>
+
+@using (Html.BeginForm()) 
+{
+    @Html.AntiForgeryToken()
+    
+<div class="form-horizontal">
+    <h4>Exam</h4>
+    <hr />
+    @Html.ValidationSummary(true, "", new { @class = "text-danger" })
+    <div class="form-group">
+        @Html.LabelFor(model => model.ExamDate, htmlAttributes: new { @class = "control-label col-md-2" })
+        <div class="col-md-10">
+            @Html.EditorFor(model => model.ExamDate, new { htmlAttributes = new { @class = "form-control" } })
+            @Html.ValidationMessageFor(model => model.ExamDate, "", new { @class = "text-danger" })
         </div>
-        <!-- /.row -->
-        <div class="row">
-            <div class="col-lg-12">
-                <div class="panel panel-default">
-                    <div class="panel-heading">
-
-                    </div>
-                    <div class="panel-body">
-                        <div class="row">
-                            <div class="col-lg-6">
-                                <form role="form">
-
-
-
-
-                                    <div class="form-group">
-                                        <label>Session</label>
-                                        <select class="form-control">
-                                            <option>session 1</option>
-                                            <option>session 2</option>
-                                            <option>session 3</option>
-                                            <option>session 4</option>
-                                            <option>session 5</option>
-                                        </select>
-                                    </div>
-
-                                    <div class="form-group">
-                                        <label>Exam date</label>
-                                        <input type=date class="form-control" placeholder="Enter Date">
-                                    </div>
-
-
-                                    <div class="form-group">
-                                        <label>Course Name</label>
-                                        <select class="form-control">
-                                            <option>1</option>
-                                            <option>2</option>
-                                            <option>3</option>
-                                            <option>4</option>
-                                            <option>5</option>
-                                        </select>
-                                    </div>
-                                    <button type="submit" class="btn btn-default">Submit</button>
-
-                                </form>
-                            </div>
-                            <!-- /.col-lg-6 (nested) -->
-                            <!-- /.col-lg-6 (nested) -->
-                        </div>
-                        <!-- /.row (nested) -->
-                    </div>
-                    <!-- /.panel-body -->
-                </div>
-                <!-- /.panel -->
-            </div>
-            <!-- /.col-lg-12 -->
-        </div>
-        <!-- /.row -->
     </div>
-    <!-- /.container-fluid -->
+
+    <div class="form-group">
+        @Html.LabelFor(model => model.CourseID, "CourseName", htmlAttributes: new { @class = "control-label col-md-2" })
+        <div class="col-md-10">
+            @Html.DropDownListFor(model => model.CourseID, ViewBag.courseList as SelectList, "--SelectCourses--", new { @class = "form-control" })
+            @Html.ValidationMessageFor(model => model.CourseID, "", new { @class = "error" })
+        </div>
+    </div>
+
+    <div class="form-group">
+        @Html.LabelFor(model => model.SessionID, "Session", htmlAttributes: new { @class = "control-label col-md-2" })
+        <div class="col-md-10">
+            @Html.DropDownListFor(model => model.SessionID, ViewBag.SessionList as SelectList, "--SelectSession--", new { @class = "form-control" })
+            @Html.ValidationMessageFor(model => model.SessionID, "", new { @class = "error" })
+        </div>
+    </div>
+
+    <div class="form-group">
+        <div class="col-md-offset-2 col-md-10">
+            <input type="submit" value="Create" class="btn btn-default" />
+        </div>
+    </div>
 </div>
-<!-- /#page-wrapper -->
+}
+
+<div>
+    @Html.ActionLink("Back to List", "Index")
+</div>
