--- a/LMS/LMS/Views/Shared/_Admin.cshtml
+++ b/LMS/LMS/Views/Shared/_Admin.cshtml
@@ -50,16 +50,9 @@
 
                 <li class="dropdown">
                     <a class="dropdown-toggle" data-toggle="dropdown" href="#">
-                        <i class="fa fa-user fa-fw"></i> secondtruth <b class="caret"></b>
+                        <i class="fa fa-user fa-fw"></i> Log out <b class="caret"></b>
                     </a>
                     <ul class="dropdown-menu dropdown-user">
-                        <li>
-                            <a href="#"><i class="fa fa-user fa-fw"></i> User Profile</a>
-                        </li>
-                        <li>
-                            <a href="#"><i class="fa fa-gear fa-fw"></i> Settings</a>
-                        </li>
-                        <li class="divider"></li>
                         <li>
                             <a href="login.html"><i class="fa fa-sign-out fa-fw"></i> Logout</a>
                         </li>
@@ -82,7 +75,7 @@
                             </div>
                             <!-- /input-group -->
                         </li>
-                
+
 
                         <li>
                             <a href="/Admin/Courses"><i class="fa fa-table fa-fw"></i> Courses</a>
@@ -110,6 +103,12 @@
                         </li>
                         <li>
                             <a href="/Admin/AdminReports"><i class="fa fa-table fa-fw"></i>Reports</a>
+                        </li>
+                        <li>
+                            <a href="/EmpRegister/empRegister"><i class="fa fa-table fa-fw"></i>Add Employee</a>
+                        </li>
+                        <li>
+                            <a href="/StuRegister/Index"><i class="fa fa-table fa-fw"></i>Add Student</a>
                         </li>
 
 
