--- a/LMS/LMS/Views/Shared/_Student.cshtml
+++ b/LMS/LMS/Views/Shared/_Student.cshtml
@@ -23,113 +23,107 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/html5shiv/3.7.3/html5shiv.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/respond.js/1.4.2/respond.min.js"></script>
     <![endif]-->
- 
-<body>
-    <div id="wrapper">
-        <!-- Navigation -->
-        <nav class="navbar navbar-inverse navbar-fixed-top" role="navigation">
-            <div class="navbar-header">
-                <a class="navbar-brand" href="index.html">Learning Management System</a>
-            </div>
-            <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
-                <span class="sr-only">Toggle navigation</span>
-                <span class="icon-bar"></span>
-                <span class="icon-bar"></span>
-                <span class="icon-bar"></span>
-            </button>
-            <ul class="nav navbar-nav navbar-left navbar-top-links">
-                <li><a href="#"><i class="fa fa-home fa-fw"></i> uet.edu.pk</a></li>
-            </ul>
-            <ul class="nav navbar-right navbar-top-links">
 
-                <li class="dropdown">
-                    <a class="dropdown-toggle" data-toggle="dropdown" href="#">
-                        <i class="fa fa-user fa-fw"></i> secondtruth <b class="caret"></b>
-                    </a>
-                    <ul class="dropdown-menu dropdown-user">
-                        <li>
-                            <a href="#"><i class="fa fa-user fa-fw"></i> User Profile</a>
-                        </li>
-                        <li>
-                            <a href="#"><i class="fa fa-gear fa-fw"></i> Settings</a>
-                        </li>
-                        <li class="divider"></li>
-                        <li>
-                            <a href="login.html"><i class="fa fa-sign-out fa-fw"></i> Logout</a>
-                        </li>
-                    </ul>
-                </li>
-            </ul>
-            <!-- /.navbar-top-links -->
-            <div class="navbar-default sidebar" role="navigation">
-                <div class="sidebar-nav navbar-collapse">
-                    <ul class="nav" id="side-menu">
-                        <li class="sidebar-search">
-                            <div class="input-group custom-search-form">
-                                <input type="text" class="form-control" placeholder="Search...">
-                                <span class="input-group-btn">
-                                    <button class="btn btn-primary" type="button">
-                                        <i class="fa fa-search"></i>
-                                    </button>
-                                </span>
-                            </div>
-                            <!-- /input-group -->
-                        </li>
-                        <li>
-                            <a href="/ShowStuInfo/Index"><i class="fa fa-dashboard fa-fw"></i> Student Dashboard</a>
-                        </li>
-
-
-
-
-                        <!-- /.nav-second-level -->
-
-                        <li>
-                            <a href="/ShowStuInfo/Index"><i class="fa fa-table fa-fw"></i> Student Details</a>
-                        </li>
-                        <li>
-                            <a href="/StuRegister/Index"><i class="fa fa-edit fa-fw"></i> Student Form</a>
-
-
-
-                        <li>
-                            <a href="/StuReports/Index"><i class="fa fa-edit fa-fw"></i>Reports</a>
-                        </li>
-
-
-
-                        <!-- /.nav-second-level -->
-
-
-
-                        <li>
-                            <a href="/ShowStuAttendence/Index"><i class="fa fa-edit fa-fw"></i>Show Student Attendence</a>
-                        </li>
-
-                        <li>
-                            <a href="/RegisteredCourses/Index"><i class="fa fa-edit fa-fw"></i>Registered Courses</a>
-                        </li>
-                        <li>
-                            <a href="/ShowRegisteredCourses/Index"><i class="fa fa-edit fa-fw"></i>Show Registered Courses</a>
-                        </li>
-
-
-                        <!-- /.nav-second-level -->
-                        </li>
-                    </ul>
+    <body>
+        <div id="wrapper">
+            <!-- Navigation -->
+            <nav class="navbar navbar-inverse navbar-fixed-top" role="navigation">
+                <div class="navbar-header">
+                    <a class="navbar-brand" href="index.html">Learning Management System</a>
                 </div>
-                <!-- /.sidebar-collapse -->
-            </div>
-            <!-- /.navbar-static-side -->
-        </nav>
-        
-             </head>
-               <body>
-                   <div>
+                <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
+                    <span class="sr-only">Toggle navigation</span>
+                    <span class="icon-bar"></span>
+                    <span class="icon-bar"></span>
+                    <span class="icon-bar"></span>
+                </button>
+                <ul class="nav navbar-nav navbar-left navbar-top-links">
+                    <li><a href="#"><i class="fa fa-home fa-fw"></i> uet.edu.pk</a></li>
+                </ul>
+                <ul class="nav navbar-right navbar-top-links">
 
-                       @RenderBody()
-                       
-                   </div>
-                </body>
-     
+                    <li class="dropdown">
+                        <a class="dropdown-toggle" data-toggle="dropdown" href="#">
+                            <i class="fa fa-user fa-fw"></i> Log out <b class="caret"></b>
+                        </a>
+                        <ul class="dropdown-menu dropdown-user">
+
+                            <li>
+                                <a href="login.html"><i class="fa fa-sign-out fa-fw"></i> Logout</a>
+                            </li>
+                        </ul>
+                    </li>
+                </ul>
+                <!-- /.navbar-top-links -->
+                <div class="navbar-default sidebar" role="navigation">
+                    <div class="sidebar-nav navbar-collapse">
+                        <ul class="nav" id="side-menu">
+                            <li class="sidebar-search">
+                                <div class="input-group custom-search-form">
+                                    <input type="text" class="form-control" placeholder="Search...">
+                                    <span class="input-group-btn">
+                                        <button class="btn btn-primary" type="button">
+                                            <i class="fa fa-search"></i>
+                                        </button>
+                                    </span>
+                                </div>
+                                <!-- /input-group -->
+                            </li>
+                            <li>
+                                <a href="/ShowStuInfo/Index"><i class="fa fa-dashboard fa-fw"></i> Student Dashboard</a>
+                            </li>
+
+
+
+
+                            <!-- /.nav-second-level -->
+
+                            <li>
+                                <a href="/ShowStuInfo/Index"><i class="fa fa-table fa-fw"></i> Student Details</a>
+                            </li>
+                            <li>
+                                <a href="/StuRegister/Index"><i class="fa fa-edit fa-fw"></i> Student Form</a>
+
+
+
+                            <li>
+                                <a href="/StuReports/Index"><i class="fa fa-edit fa-fw"></i>Reports</a>
+                            </li>
+
+
+
+                            <!-- /.nav-second-level -->
+
+
+
+                            <li>
+                                <a href="/ShowStuAttendence/Index"><i class="fa fa-edit fa-fw"></i>Show Student Attendence</a>
+                            </li>
+
+                            <li>
+                                <a href="/RegisteredCourses/Index"><i class="fa fa-edit fa-fw"></i>Registered Courses</a>
+                            </li>
+                            <li>
+                                <a href="/ShowRegisteredCourses/Index"><i class="fa fa-edit fa-fw"></i>Show Registered Courses</a>
+                            </li>
+
+
+                            <!-- /.nav-second-level -->
+                            </li>
+                        </ul>
+                    </div>
+                    <!-- /.sidebar-collapse -->
+                </div>
+                <!-- /.navbar-static-side -->
+            </nav>
+
+</head>
+<body>
+    <div>
+
+        @RenderBody()
+
+    </div>
+</body>
+
 </html>
