--- a/LMS/LMS/Views/Admin/Result.cshtml
+++ b/LMS/LMS/Views/Admin/Result.cshtml
@@ -25,6 +25,18 @@
                                 <form role="form">
 
                                     <div class="form-group">
+                                        <label>Session</label>
+                                        <select class="form-control">
+                                            <option></option>
+                                            <option>Section A</option>
+                                            <option>Section B</option>
+                                            <option>Section C</option>
+                                            <option>Section D</option>
+
+                                        </select>
+                                    </div>
+
+                                    <div class="form-group">
                                         <label>Section</label>
                                         <select class="form-control">
                                             <option></option>
@@ -36,12 +48,18 @@
                                         </select>
                                     </div>
 
-
-
                                     <div class="form-group">
-                                        <label>CGPA</label>
-                                        <input class="form-control" placeholder="Enter CGPA">
+                                        <label>Student</label>
+                                        <select class="form-control">
+                                            <option></option>
+                                            <option>1</option>
+                                            <option>2</option>
+                                            <option>3</option>
+                                            <option>4</option>
+
+                                        </select>
                                     </div>
+
 
 
 
@@ -57,17 +75,7 @@
                                     </div>
 
 
-                                    <div class="form-group">
-                                        <label>Session</label>
-                                        <select class="form-control">
-                                            <option></option>
-                                            <option>1</option>
-                                            <option>2</option>
-                                            <option>3</option>
-                                            <option>4</option>
-
-                                        </select>
-                                    </div>
+                                    
 
                                     <div class="form-group">
                                         <label>Date</label>
@@ -75,7 +83,7 @@
                                     </div>
 
                                     <div class="form-group">
-                                        <label>Registerd Course</label>
+                                        <label>Course</label>
                                         <select class="form-control">
                                             <option></option>
                                             <option>1</option>
