--- a/LMS/LMS/Views/Shared/_Admin.cshtml
+++ b/LMS/LMS/Views/Shared/_Admin.cshtml
@@ -65,20 +65,13 @@
                 <div class="sidebar-nav navbar-collapse">
                     <ul class="nav" id="side-menu">
                         <li class="sidebar-search">
-                            <div class="input-group custom-search-form">
-                                <input type="text" class="form-control" placeholder="Search...">
-                                <span class="input-group-btn">
-                                    <button class="btn btn-primary" type="button">
-                                        <i class="fa fa-search"></i>
-                                    </button>
-                                </span>
-                            </div>
+                          
                             <!-- /input-group -->
                         </li>
 
 
                         <li>
-                            <a href="/Admin/Courses"><i class="fa fa-table fa-fw"></i> Courses</a>
+                            <a href="/Admin/Courses"><i class="fa fa-table fa-fw"></i> Add Courses</a>
                         </li>
 
                         <li>
@@ -86,20 +79,18 @@
                         </li>
 
                         <li>
-                            <a href="/Admin/Exam"><i class="fa fa-table fa-fw"></i>Exam</a>
+                            <a href="/Admin/Exam"><i class="fa fa-table fa-fw"></i>Add Exam</a>
                         </li>
                         <li>
                             <a href="/Admin/ShowExam"><i class="fa fa-table fa-fw"></i>Show Exam</a>
                         </li>
 
                         <li>
-                            <a href="/Admin/Result"><i class="fa fa-table fa-fw"></i>Result</a>
+                            <a href="/Admin/Result"><i class="fa fa-table fa-fw"></i>Add Result</a>
                         </li>
+
                         <li>
-                            <a href="/Admin/ShowResult"><i class="fa fa-table fa-fw"></i>Show Result</a>
-                        </li>
-                        <li>
-                            <a href="/Admin/StudentResult"><i class="fa fa-table fa-fw"></i>Student Result</a>
+                            <a href="/Admin/AddScholarship"><i class="fa fa-table fa-fw"></i>Add Scholarship</a>
                         </li>
                         <li>
                             <a href="/Admin/AdminReports"><i class="fa fa-table fa-fw"></i>Reports</a>
@@ -108,7 +99,13 @@
                             <a href="/EmpRegister/empRegister"><i class="fa fa-table fa-fw"></i>Add Employee</a>
                         </li>
                         <li>
-                            <a href="/StuRegister/Index"><i class="fa fa-table fa-fw"></i>Add Student</a>
+                            <a href="/Admin/ShowEmployee"><i class="fa fa-table fa-fw"></i>EmployeesList</a>
+                        </li>
+                        <li>
+                            <a href="/Admin/ShowStudnet"><i class="fa fa-table fa-fw"></i>StudentList</a>
+                        </li>
+                        <li>
+                            <a href="/Admin/RegisterStudent"><i class="fa fa-table fa-fw"></i>Add Studnet</a>
                         </li>
 
 
