--- a/LMS/LMS/Views/Shared/_Employee.cshtml
+++ b/LMS/LMS/Views/Shared/_Employee.cshtml
@@ -61,18 +61,11 @@
                     <ul class="nav" id="side-menu">
                         <li class="sidebar-search">
                             <div class="input-group custom-search-form">
-                                <input type="text" class="form-control" placeholder="Search...">
-                                <span class="input-group-btn">
-                                    <button class="btn btn-primary" type="button">
-                                        <i class="fa fa-search"></i>
-                                    </button>
-                                </span>
+                              
                             </div>
                             <!-- /input-group -->
                         </li>
-                        <li>
-                            <a href="/EmpRegister/empDetails"><i class="fa fa-dashboard fa-fw"></i> Employee Dashboard</a>
-                        </li>
+                      
 
 
 
@@ -80,24 +73,16 @@
                             <!--  <a href="#"><i class="fa fa-wrench fa-fw"></i> UI Elements<span class="fa arrow"></span></a>
                               <ul class="nav nav-second-level">-->
 
-                            <a href="/EmpRegister/empDetails"><i class="fa fa-table fa-fw"></i>Employee Details</a>
+                            <a href="/Employee/EmployeeDetails"><i class="fa fa-table fa-fw"></i>Employee Details</a>
                         </li>
                         <li>
-                            <a href="/EmpRegister/ClassAttendence"><i class="fa fa-table fa-fw"></i>Class Attendence</a>
+                            <a href="/Employee/MarkStudnetAttendance"><i class="fa fa-table fa-fw"></i>Class Attendence</a>
                         </li>
                         <li>
-                            <a href="/EmpRegister/empReports"><i class="fa fa-table fa-fw"></i>Reports</a>
+                            <a href="/Employee/Reports"><i class="fa fa-table fa-fw"></i>Reports</a>
                         </li>
 
-                        <li>
-                            <a href="/EmpRegister/showClassAttendence"><i class="fa fa-table fa-fw"></i> Show Class Attendence</a>
-                        </li>
-                        <li>
-                            <a href="/EmpRegister/stuAttendence"><i class="fa fa-table fa-fw"></i>Student Attendence</a>
-                        </li>
-                        <li>
-                            <a href="/EmpRegister/ShowstuAttendence"><i class="fa fa-table fa-fw"></i>Show Student Attendence</a>
-                        </li>
+                       
                         <!--   </ul> -->
                         <!-- /.nav-second-level -->
                         </li>
