--- a/LMS/LMS/Views/Shared/_Student.cshtml
+++ b/LMS/LMS/Views/Shared/_Student.cshtml
@@ -60,34 +60,39 @@
                         <ul class="nav" id="side-menu">
                             <li class="sidebar-search">
                                 <div class="input-group custom-search-form">
-                                    <input type="text" class="form-control" placeholder="Search...">
-                                    <span class="input-group-btn">
-                                        <button class="btn btn-primary" type="button">
-                                            <i class="fa fa-search"></i>
-                                        </button>
-                                    </span>
+                                    
+                                    
                                 </div>
                                 <!-- /input-group -->
                             </li>
                             <li>
-                                <a href="/ShowStuInfo/Index"><i class="fa fa-dashboard fa-fw"></i> Student Dashboard</a>
+                                <a href="/Student/StudentDetalis"><i class="fa fa-dashboard fa-fw"></i> Student Details</a>
                             </li>
 
 
 
 
                             <!-- /.nav-second-level -->
-
                             <li>
-                                <a href="/ShowStuInfo/Index"><i class="fa fa-table fa-fw"></i> Student Details</a>
+                                <a href="/Student/RegisterACourses"><i class="fa fa-edit fa-fw"></i>Register Courses</a>
                             </li>
                             <li>
-                                <a href="/StuRegister/Index"><i class="fa fa-edit fa-fw"></i> Student Form</a>
+                                <a href="/Student/RegisterCourses"><i class="fa fa-edit fa-fw"></i>Show Registered Courses</a>
+                            </li>
+                            <li>
+                                <a href="/Student/Scholarship"><i class="fa fa-edit fa-fw"></i> Scholarships</a>
 
 
 
                             <li>
-                                <a href="/StuReports/Index"><i class="fa fa-edit fa-fw"></i>Reports</a>
+                            <li>
+                                <a href="/Student/ViewDmc"><i class="fa fa-edit fa-fw"></i>View Dmc </a>
+
+
+
+                            <li>
+
+                                <a href="/Student/Reports"><i class="fa fa-edit fa-fw"></i>Reports</a>
                             </li>
 
 
@@ -97,16 +102,14 @@
 
 
                             <li>
-                                <a href="/ShowStuAttendence/Index"><i class="fa fa-edit fa-fw"></i>Show Student Attendence</a>
+                                <a href="/Student/Attendance"><i class="fa fa-edit fa-fw"></i>Show Attendence</a>
                             </li>
 
-                            <li>
-                                <a href="/RegisteredCourses/Index"><i class="fa fa-edit fa-fw"></i>Registered Courses</a>
-                            </li>
-                            <li>
-                                <a href="/ShowRegisteredCourses/Index"><i class="fa fa-edit fa-fw"></i>Show Registered Courses</a>
-                            </li>
 
+
+                            <li>
+                                <a href="/Student/FeeChallan"><i class="fa fa-table fa-fw"></i>Fee Challan </a>
+                            </li>
 
                             <!-- /.nav-second-level -->
                             </li>
