--- a/LMS/LMS/Views/StuReports/Index.cshtml
+++ b/LMS/LMS/Views/StuReports/Index.cshtml
@@ -29,15 +29,11 @@
 
                                     <button type="button" class="btn btn-primary"> Date Sheet</button>
                                     <br>
+                                    
                                     <br>
-                                    <button type="button" class="btn btn-primary">Challan Form</button>
+                                    <button type="button" class="btn btn-primary">Attendence Report</button>
                                     <br>
-                                    <br>
-                                    <button type="button" class="btn btn-primary">Attendence</button>
-                                    <br>
-                                    <br>
-                                    <button type="button" class="btn btn-primary">Scholarship</button>
-                                    <br>
+                                  
                                     <br>
                                     <button type="button" class="btn btn-primary">Fine</button>
                                     <br>
@@ -45,9 +41,7 @@
                                     <button type="button" class="btn btn-primary">DMC</button>
                                     <br>
                                     <br>
-                                    <button type="button" class="btn btn-primary">Registered Courses</button>
-
-
+                                   
                                 </form>
                             </div>
                             <!-- /.col-lg-6 (nested) -->
