--- a/LMS/LMS/Views/RegisteredCourses/Index.cshtml
+++ b/LMS/LMS/Views/RegisteredCourses/Index.cshtml
@@ -7,7 +7,7 @@
     <div class="container-fluid">
         <div class="row">
             <div class="col-lg-12">
-                <h1 class="page-header">Register Courses</h1>
+                <h1 class="page-header">Register Course</h1>
             </div>
             <!-- /.col-lg-12 -->
         </div>
@@ -23,7 +23,7 @@
                             <div class="col-lg-6">
                                 <form role="form">
                                     <div class="form-group">
-                                        <label>Student Id</label>
+                                        <label>Course</label>
                                         <select class="form-control">
                                             <option>Select</option>
                                             <option></option>
@@ -34,7 +34,7 @@
                                     </div>
 
                                     <div class="form-group">
-                                        <label>Course Id</label>
+                                        <label>Section</label>
                                         <select class="form-control">
                                             <option>Select</option>
                                             <option></option>
@@ -44,7 +44,7 @@
                                         </select>
                                     </div>
 
-                                    <button type="submit" class="btn btn-default">Submit</button>
+                                    <button type="submit" class="btn btn-default">Register</button>
 
                                 </form>
                             </div>
