--- a/LMS/LMS/Views/Admin/Exam.cshtml
+++ b/LMS/LMS/Views/Admin/Exam.cshtml
@@ -5,48 +5,78 @@
     Layout = "~/Views/Shared/_Admin.cshtml";
 }
 
-<h2>Exam</h2>
-
-@using (Html.BeginForm()) 
-{
-    @Html.AntiForgeryToken()
-    
-<div class="form-horizontal">
-    <h4>Exam</h4>
-    <hr />
-    @Html.ValidationSummary(true, "", new { @class = "text-danger" })
-    <div class="form-group">
-        @Html.LabelFor(model => model.ExamDate, htmlAttributes: new { @class = "control-label col-md-2" })
-        <div class="col-md-10">
-            @Html.EditorFor(model => model.ExamDate, new { htmlAttributes = new { @class = "form-control" } })
-            @Html.ValidationMessageFor(model => model.ExamDate, "", new { @class = "text-danger" })
+<div id="page-wrapper">
+    <div class="container-fluid">
+        <div class="row">
+            <div class="col-lg-12">
+                <h1 class="page-header">Exam</h1>
+            </div>
+            <!-- /.col-lg-12 -->
         </div>
-    </div>
+        <!-- /.row -->
+        <div class="row">
+            <div class="col-lg-12">
+                <div class="panel panel-default">
+                    <div class="panel-heading">
 
-    <div class="form-group">
-        @Html.LabelFor(model => model.CourseID, "CourseName", htmlAttributes: new { @class = "control-label col-md-2" })
-        <div class="col-md-10">
-            @Html.DropDownListFor(model => model.CourseID, ViewBag.courseList as SelectList, "--SelectCourses--", new { @class = "form-control" })
-            @Html.ValidationMessageFor(model => model.CourseID, "", new { @class = "error" })
-        </div>
-    </div>
+                        <h2>Exam</h2>
 
-    <div class="form-group">
-        @Html.LabelFor(model => model.SessionID, "Session", htmlAttributes: new { @class = "control-label col-md-2" })
-        <div class="col-md-10">
-            @Html.DropDownListFor(model => model.SessionID, ViewBag.SessionList as SelectList, "--SelectSession--", new { @class = "form-control" })
-            @Html.ValidationMessageFor(model => model.SessionID, "", new { @class = "error" })
-        </div>
-    </div>
+                        @using (Html.BeginForm())
+                        {
+                            @Html.AntiForgeryToken()
 
-    <div class="form-group">
-        <div class="col-md-offset-2 col-md-10">
-            <input type="submit" value="Create" class="btn btn-default" />
-        </div>
-    </div>
-</div>
-}
+                            <div class="form-horizontal">
+                                <h4>Exam</h4>
+                                <hr />
+                                @Html.ValidationSummary(true, "", new { @class = "text-danger" })
+                                <div class="form-group">
+                                    @Html.LabelFor(model => model.ExamDate, htmlAttributes: new { @class = "control-label col-md-2" })
+                                    <div class="col-md-10">
+                                        @Html.EditorFor(model => model.ExamDate, new { htmlAttributes = new { @class = "form-control" } })
+                                        @Html.ValidationMessageFor(model => model.ExamDate, "", new { @class = "text-danger" })
+                                    </div>
+                                </div>
 
-<div>
-    @Html.ActionLink("Back to List", "Index")
-</div>
+                                <div class="form-group">
+                                    @Html.LabelFor(model => model.DepartmentId, "DepartmentName", htmlAttributes: new { @class = "control-label col-md-2" })
+                                    <div class="col-md-10">
+                                        <br />
+
+                                        @Html.DropDownListFor(model => model.DepartmentId, ViewBag.DepartmentList as SelectList, "--SelectDepartment--", new { @class = "form-control" })
+                                        @Html.ValidationMessageFor(model => model.DepartmentId, "", new { @class = "error" })
+                                    </div>
+                                </div>
+                                <br />
+
+                                <div class="form-group">
+                                    @Html.LabelFor(model => model.SessionID, "Session1", htmlAttributes: new { @class = "control-label col-md-2" })
+                                    <div class="col-md-10">
+                                        <br />
+
+                                        @Html.DropDownListFor(model => model.SessionID, ViewBag.SessionList as SelectList, "--SelectSession--", new { @class = "form-control" })
+                                        @Html.ValidationMessageFor(model => model.SessionID, "", new { @class = "error" })
+                                    </div>
+                                </div>
+                                <br />
+
+                                <div class="form-group">
+                                    @Html.LabelFor(model => model.CourseID, "CourseName", htmlAttributes: new { @class = "control-label col-md-2" })
+                                    <div class="col-md-10">
+                                        <br />
+
+                                        @Html.DropDownListFor(model => model.CourseID, ViewBag.courseList as SelectList, "--SelectCourse--", new { @class = "form-control" })
+                                        @Html.ValidationMessageFor(model => model.CourseID, "", new { @class = "error" })
+                                    </div>
+                                </div>
+                                <br />
+                                <div class="form-group">
+                                    <div class="col-md-offset-2 col-md-10">
+                                        <input type="submit" value="Create" class="btn btn-default" />
+                                    </div>
+                                </div>
+                            </div>
+                        }
+
+                        <div>
+                            @Html.ActionLink("Back to List", "Index")
+                        </div>
