--- a/LMS/LMS/Views/Admin/ShowExam.cshtml
+++ b/LMS/LMS/Views/Admin/ShowExam.cshtml
@@ -25,8 +25,10 @@
                             <table class="table table-striped table-bordered table-hover" id="dataTables-example">
                                 <thead>
                                     <tr>
-                                        <th>Session</th>
+                                       
                                         <th>Exam Date</th>
+                                        <th>Session</th>
+                                        <th>Department</th>
                                         <th>Course Name</th>
 
                                     </tr>
@@ -36,9 +38,11 @@
                                         <td> </td>
                                         <td> </td>
                                         <td> </td>
+                                        <td> </td>
 
                                     </tr>
                                     <tr class="even gradeC">
+                                        <td> </td>
                                         <td> </td>
                                         <td> </td>
                                         <td> </td>
@@ -50,103 +54,10 @@
                                         <td> </td>
                                         <td> </td>
                                         <td> </td>
-
-                                    </tr>
-                                    <tr class="gradeA">
-                                        <td> </td>
-                                        <td> </td>
                                         <td> </td>
 
                                     </tr>
-                                    <tr class="gradeA">
-                                        <td> </td>
-                                        <td> </td>
-                                        <td> </td>
-
-                                    </tr>
-                                    <tr class="gradeA">
-                                        <td> </td>
-                                        <td> </td>
-                                        <td> </td>
-
-                                    </tr>
-                                    <tr class="gradeA">
-                                        <td> </td>
-                                        <td> </td>
-                                        <td> </td>
-
-                                    </tr>
-                                    <tr class="gradeA">
-                                        <td> </td>
-                                        <td> </td>
-                                        <td> </td>
-
-                                    </tr>
-                                    <tr class="gradeA">
-                                        <td> </td>
-                                        <td> </td>
-                                        <td> </td>
-                                    </tr>
-                                    <tr class="gradeA">
-                                        <td> </td>
-                                        <td> </td>
-                                        <td> </td>
-
-                                    </tr>
-                                    <tr class="gradeA">
-                                        <td> </td>
-                                        <td> </td>
-                                        <td> </td>
-
-
-                                    </tr>
-                                    <tr class="gradeA">
-                                        <td> </td>
-                                        <td> </td>
-                                        <td> </td>
-
-                                    </tr>
-                                    <tr class="gradeA">
-                                        <td> </td>
-                                        <td> </td>
-                                        <td> </td>
-
-                                    </tr>
-                                    <tr class="gradeA">
-                                        <td> </td>
-                                        <td> </td>
-                                        <td> </td>
-
-                                    </tr>
-                                    <tr class="gradeA">
-                                        <td> </td>
-                                        <td> </td>
-                                        <td> </td>
-
-                                    </tr>
-                                    <tr class="gradeA">
-                                        <td> </td>
-                                        <td> </td>
-                                        <td> </td>
-
-                                    </tr>
-                                    <tr class="gradeA">
-                                        <td> </td>
-                                        <td> </td>
-                                        <td> </td>
-
-                                    </tr>
-                                    <tr class="gradeA">
-                                        <td> </td>
-                                        <td> </td>
-                                        <td> </td>
-
-                                    </tr>
-                                    <tr class="gradeA">
-                                        <td> </td>
-                                        <td> </td>
-                                        <td> </td>
-                                    </tr>
+                                
 
                                 </tbody>
                             </table>
