--- a/LMS/LMS/Views/RegisteredCourses/Index.cshtml
+++ b/LMS/LMS/Views/RegisteredCourses/Index.cshtml
@@ -24,6 +24,18 @@
                                 <form role="form">
                                     <div class="form-group">
                                         <label>Course</label>
+
+                                        <div class="form-group">
+                                            <label>Semester</label>
+                                            <select class="form-control">
+                                                <option>Select</option>
+                                                <option></option>
+                                                <option></option>
+                                                <option></option>
+                                                <option></option>
+                                            </select>
+                                        </div>
+
                                         <select class="form-control">
                                             <option>Select</option>
                                             <option></option>
@@ -32,6 +44,8 @@
                                             <option></option>
                                         </select>
                                     </div>
+
+                                  
 
                                     <div class="form-group">
                                         <label>Section</label>
@@ -43,6 +57,8 @@
                                             <option></option>
                                         </select>
                                     </div>
+
+
 
                                     <button type="submit" class="btn btn-default">Register</button>
 
