--- a/LMS/LMS/Views/Shared/_Admin.cshtml
+++ b/LMS/LMS/Views/Shared/_Admin.cshtml
@@ -65,7 +65,7 @@
                 <div class="sidebar-nav navbar-collapse">
                     <ul class="nav" id="side-menu">
                         <li class="sidebar-search">
-                          
+
                             <!-- /input-group -->
                         </li>
 
@@ -105,7 +105,10 @@
                             <a href="/Admin/ShowStudnet"><i class="fa fa-table fa-fw"></i>StudentList</a>
                         </li>
                         <li>
-                            <a href="/Admin/RegisterStudent"><i class="fa fa-table fa-fw"></i>Add Studnet</a>
+                            <a href="/Admin/RegisterStudent"><i class="fa fa-table fa-fw"></i>Add Student</a>
+                        </li>
+                        <li>
+                            <a href="/Admin/AddFee"><i class="fa fa-table fa-fw"></i>Add Fee</a>
                         </li>
 
 
