--- a/LMS/LMS/Views/Admin/ShowExam.cshtml
+++ b/LMS/LMS/Views/Admin/ShowExam.cshtml
@@ -1,14 +1,14 @@
-﻿
+﻿@model IEnumerable<LMS.Models.Exam>
+
 @{
     ViewBag.Title = "ShowExam";
     Layout = "~/Views/Shared/_Admin.cshtml";
 }
-
 <div id="page-wrapper">
     <div class="container-fluid">
         <div class="row">
             <div class="col-lg-12">
-                <h1 class="page-header">Exam</h1>
+                <h1 class="page-header">Show Exam</h1>
             </div>
             <!-- /.col-lg-12 -->
         </div>
@@ -17,64 +17,47 @@
             <div class="col-lg-12">
                 <div class="panel panel-default">
                     <div class="panel-heading">
-                        Exam Information
-                    </div>
-                    <!-- /.panel-heading -->
-                    <div class="panel-body">
-                        <div class="table-responsive">
-                            <table class="table table-striped table-bordered table-hover" id="dataTables-example">
-                                <thead>
-                                    <tr>
-                                       
-                                        <th>Exam Date</th>
-                                        <th>Session</th>
-                                        <th>Department</th>
-                                        <th>Course Name</th>
-
-                                    </tr>
-                                </thead>
-                                <tbody>
-                                    <tr class="odd gradeX">
-                                        <td> </td>
-                                        <td> </td>
-                                        <td> </td>
-                                        <td> </td>
-
-                                    </tr>
-                                    <tr class="even gradeC">
-                                        <td> </td>
-                                        <td> </td>
-                                        <td> </td>
-                                        <td> </td>
-
-                                    </tr>
 
 
-                                    <tr class="even gradeA">
-                                        <td> </td>
-                                        <td> </td>
-                                        <td> </td>
-                                        <td> </td>
 
-                                    </tr>
-                                
+                        <table class="table">
+                            <tr>
+                                <th>
+                                    @Html.DisplayNameFor(model => model.ExamDate)
+                                </th>
+                                <th>
+                                    @Html.DisplayNameFor(model => model.Course.CourseName)
+                                </th>
+                                <th>
+                                    @Html.DisplayNameFor(model => model.Department.DepartmentName)
+                                </th>
+                                <th>
+                                    @Html.DisplayNameFor(model => model.Session.Session1)
+                                </th>
+                                <th></th>
+                            </tr>
 
-                                </tbody>
-                            </table>
-                        </div>
-                        <!-- /.table-responsive -->
+                            @foreach (var item in Model)
+                            {
+                                <tr>
+                                    <td>
+                                        @Html.DisplayFor(modelItem => item.ExamDate)
+                                    </td>
+                                    <td>
+                                        @Html.DisplayFor(modelItem => item.Course.CourseName)
+                                    </td>
+                                    <td>
+                                        @Html.DisplayFor(modelItem => item.Department.DepartmentName)
+                                    </td>
+                                    <td>
+                                        @Html.DisplayFor(modelItem => item.Session.Session1)
+                                    </td>
+                                    <td>
+                                        @Html.ActionLink("Edit", "Edit", new { id = item.ExamID }) |
+                                        @Html.ActionLink("Details", "Details", new { id = item.ExamID }) |
+                                        @Html.ActionLink("Delete", "Delete", new { id = item.ExamID })
+                                    </td>
+                                </tr>
+                            }
 
-                    </div>
-                    <!-- /.table-responsive -->
-                </div>
-                <!-- /.panel-body -->
-            </div>
-            <!-- /.panel -->
-        </div>
-        <!-- /.col-lg-6 -->
-    </div>
-    <!-- /.row -->
-</div>
-<!-- /.container-fluid -->
-            </div>
-<!-- /#page-wrapper -->
+                        </table>
