Courses Reports,fee remaining

--- a/LMS/LMS/Views/Admin/ShowCourses.cshtml
+++ b/LMS/LMS/Views/Admin/ShowCourses.cshtml
@@ -20,6 +20,10 @@
                 <div class="panel panel-default">
                     <div class="panel-heading">
 
+                        <p>
+                            <a class="btn btn-success" href="@Url.Action("ReportCourses")">Download Report</a>
+                        </p>
+
                        
                         <table class="table">
                             <tr>
