--- a/LMS/LMS/Views/Shared/_Student.cshtml
+++ b/LMS/LMS/Views/Shared/_Student.cshtml
@@ -60,8 +60,8 @@
                         <ul class="nav" id="side-menu">
                             <li class="sidebar-search">
                                 <div class="input-group custom-search-form">
-                                    
-                                    
+
+
                                 </div>
                                 <!-- /input-group -->
                             </li>
@@ -110,9 +110,12 @@
                             <li>
                                 <a href="/Student/FeeChallan"><i class="fa fa-table fa-fw"></i>Fee Challan </a>
                             </li>
+                            <li>
+                                <a href="/Student/ShowFee"><i class="fa fa-table fa-fw"></i>View Semester wise Fee </a>
+                            </li>
 
                             <!-- /.nav-second-level -->
-                            </li>
+                             
                         </ul>
                     </div>
                     <!-- /.sidebar-collapse -->
