--- a/LMS/LMS/Views/Admin/AddFee.cshtml
+++ b/LMS/LMS/Views/Admin/AddFee.cshtml
@@ -24,7 +24,7 @@
                             @Html.AntiForgeryToken()
 
                             <div class="form-horizontal">
-                               
+                                <h4>Fee</h4>
                                 <hr />
                                 @Html.ValidationSummary(true, "", new { @class = "text-danger" })
                                 <div class="form-group">
@@ -44,6 +44,14 @@
                                 </div>
 
                                 <div class="form-group">
+                                    @Html.LabelFor(model => model.Date, htmlAttributes: new { @class = "control-label col-md-2" })
+                                    <div class="col-md-10">
+                                        @Html.EditorFor(model => model.Date, new { htmlAttributes = new { @class = "form-control" } })
+                                        @Html.ValidationMessageFor(model => model.Date, "", new { @class = "text-danger" })
+                                    </div>
+                                </div>
+
+                                <div class="form-group">
                                     <div class="col-md-offset-2 col-md-10">
                                         <input type="submit" value="Create" class="btn btn-default" />
                                     </div>
@@ -51,4 +59,4 @@
                             </div>
                         }
 
-                      
+                        
