--- a/LMS/LMS/Views/ShowRegisteredCourses/ShowRegisteredCourses.cshtml
+++ b/LMS/LMS/Views/ShowRegisteredCourses/ShowRegisteredCourses.cshtml
@@ -1,10 +1,8 @@
-﻿@model IEnumerable<LMS.Models.RegisteredCours>
-
+﻿
 @{
     ViewBag.Title = "ShowRegisteredCourses";
     Layout = "~/Views/Shared/_Student.cshtml";
 }
-
 
 <div id="page-wrapper">
     <div class="container-fluid">
@@ -19,43 +17,41 @@
             <div class="col-lg-12">
                 <div class="panel panel-default">
                     <div class="panel-heading">
-
-
                         <table class="table">
                             <tr>
                                 <th>
-                                    @Html.DisplayNameFor(model => model.Semester)
+                                    @Html.DisplayName("Semester")
                                 </th>
                                 <th>
-                                    @Html.DisplayNameFor(model => model.Course.CourseName)
+                                    @Html.DisplayName("SectionID")
                                 </th>
                                 <th>
-                                    @Html.DisplayNameFor(model => model.Sectionss.SectionName)
+                                    @Html.DisplayName("CourseID")
                                 </th>
                                 <th>
-                                    @Html.DisplayNameFor(model => model.Student.Name)
+                                    @Html.DisplayName("StudentID")
                                 </th>
-                                <th></th>
+                                
+
+
+
                                 <th></th>
                             </tr>
-
                             @if (Session["RegisteredCourseID"] != null)
                             {
-                            <tr>
-                                @*<td>
-            @Session["Name"].ToString()
-        </td>*@
-                                <td>  @Session["Semester"] </td>
-                                <td>  @Session["CourseName"] </td>
-                                <td>  @Session["SectionName"] </td>
-                                <td>  @Session["Name"] </td>
-                                @*<td> @Session[""] </td>
-        <td>  @Session["DOB"]</td>
-        <td>  @Session["Address"] </td>
-        <td> @Session["Department"]</td>
-        <td>@Html.ActionLink("Edit", "StudentEdit", new { id = @Session["StudentID"] }) </td>*@
+                                <tr>
+                                    <td>
+                                        @Session["Semester"].ToString()
+                                    </td>
+                                    <td>  @Session["SectionID"] </td>
+                                    <td>  @Session["CourseID"] </td>
+                                    <td> @Session["StudentID"] </td>
+                                     
+                                   
 
-                            </tr>
+                                </tr>
 
                             }
                         </table>
+
+
