--- a/LMS/LMS/Views/Shared/_Admin.cshtml
+++ b/LMS/LMS/Views/Shared/_Admin.cshtml
@@ -110,7 +110,12 @@
                         <li>
                             <a href="/Admin/AddFee"><i class="fa fa-table fa-fw"></i>Add Fee</a>
                         </li>
-
+                        <li>
+                            <a href="/Admin/UpdateFee"><i class="fa fa-table fa-fw"></i>Students Fee</a>
+                        </li>
+                        <li>
+                            <a href="/Admin/AdminShowUpFeeChallan"><i class="fa fa-table fa-fw"></i>Students Fee Availing Scholarships</a>
+                        </li>
 
                     </ul>
                 </div>
