--- a/LMS/LMS/Views/Shared/_Student.cshtml
+++ b/LMS/LMS/Views/Shared/_Student.cshtml
@@ -114,8 +114,11 @@
                                 <a href="/Student/ShowFee"><i class="fa fa-table fa-fw"></i>View Semester wise Fee </a>
                             </li>
 
+                            <li>
+                                <a href="/Student/UpFeeChallan"><i class="fa fa-table fa-fw"></i>View Fee Challan</a>
+                            </li>
                             <!-- /.nav-second-level -->
-                             
+
                         </ul>
                     </div>
                     <!-- /.sidebar-collapse -->
