--- a/LMS/LMS/Views/Student/UpFeeChallan.cshtml
+++ b/LMS/LMS/Views/Student/UpFeeChallan.cshtml
@@ -1,15 +1,13 @@
-﻿@model IEnumerable<LMS.Models.Fe>
-
+﻿
 @{
     ViewBag.Title = "UpFeeChallan";
     Layout = "~/Views/Shared/_Student.cshtml";
 }
-
 <div id="page-wrapper">
     <div class="container-fluid">
         <div class="row">
             <div class="col-lg-12">
-                <h1 class="page-header">Fee Challan</h1>
+                <h1 class="page-header">Challan Form</h1>
             </div>
             <!-- /.col-lg-12 -->
         </div>
@@ -18,42 +16,41 @@
             <div class="col-lg-12">
                 <div class="panel panel-default">
                     <div class="panel-heading">
-
-                       
                         <table class="table">
                             <tr>
+                               
                                 <th>
-                                    @Html.DisplayNameFor(model => model.NewFee)
+                                    @Html.DisplayName("ScholarshipID")
                                 </th>
                                 <th>
-                                    @Html.DisplayNameFor(model => model.Lookup.Name)
+                                    @Html.DisplayName("LookupID")
                                 </th>
                                 <th>
-                                    @Html.DisplayNameFor(model => model.Scholarshipss.Scholarship)
+                                    @Html.DisplayName("NewFee")
                                 </th>
                                 <th>
-                                    @Html.DisplayNameFor(model => model.Student.Name)
+                                    @Html.DisplayName("StudentID")
                                 </th>
-                             
-                            </tr>
 
-                            @foreach (var item in Model)
+
+
+
+                                <th></th>
+                            </tr>
+                            @if (Session["FeeID"] != null)
                             {
                                 <tr>
                                     <td>
-                                        @Html.DisplayFor(modelItem => item.NewFee)
+                                        @Session["ScholarshipID"].ToString()
                                     </td>
-                                    <td>
-                                        @Html.DisplayFor(modelItem => item.Lookup.Name)
-                                    </td>
-                                    <td>
-                                        @Html.DisplayFor(modelItem => item.Scholarshipss.Scholarship)
-                                    </td>
-                                    <td>
-                                        @Html.DisplayFor(modelItem => item.Student.Name)
-                                    </td>
-                                     
-                                </tr>
-                            }
+                                    <td>  @Session["NewFee"] </td>
+                                    <td>  @Session["LookupID"] </td>
+                                    <td> @Session["StudentID"] </td>
 
+
+
+                                </tr>
+
+                            }
                         </table>
+
